// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`swapDepositAddressReady > can handle empty ccm messages 1`] = `
{
  "ccmGasBudget": "0",
  "ccmMessage": "0x",
  "channelId": 1n,
  "chunkIntervalBlocks": null,
  "createdAt": Any<Date>,
  "depositAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2",
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "Dot",
  "estimatedExpiryAt": 2023-11-09T10:49:12.000Z,
  "expectedDepositAmount": null,
  "expiryBlock": null,
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "isExpired": false,
  "issuedBlock": 120,
  "maxBoostFeeBps": 0,
  "numberOfChunks": 1,
  "openedThroughBackend": false,
  "openingFeePaid": "0",
  "srcAsset": "Eth",
  "srcChain": "Ethereum",
  "srcChainExpiryBlock": 256n,
  "totalBrokerCommissionBps": 0,
}
`;

exports[`swapDepositAddressReady > creates a swap deposit channel entry 1`] = `
{
  "beneficiaries": [],
  "ccmGasBudget": null,
  "ccmMessage": null,
  "channelId": 1n,
  "chunkIntervalBlocks": null,
  "createdAt": Any<Date>,
  "depositAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2",
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "Dot",
  "estimatedExpiryAt": 2023-11-09T10:49:12.000Z,
  "expectedDepositAmount": null,
  "expiryBlock": null,
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "isExpired": false,
  "issuedBlock": 120,
  "maxBoostFeeBps": 0,
  "numberOfChunks": 1,
  "openedThroughBackend": false,
  "openingFeePaid": "0",
  "srcAsset": "Eth",
  "srcChain": "Ethereum",
  "srcChainExpiryBlock": 256n,
  "totalBrokerCommissionBps": 0,
}
`;

exports[`swapDepositAddressReady > creates a swap deposit channel entry with a broker commission 1`] = `
{
  "ccmGasBudget": null,
  "ccmMessage": null,
  "channelId": 1n,
  "chunkIntervalBlocks": null,
  "createdAt": Any<Date>,
  "depositAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2",
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "Dot",
  "estimatedExpiryAt": 2023-11-09T10:49:12.000Z,
  "expectedDepositAmount": null,
  "expiryBlock": null,
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "isExpired": false,
  "issuedBlock": 121,
  "maxBoostFeeBps": 0,
  "numberOfChunks": 1,
  "openedThroughBackend": false,
  "openingFeePaid": "0",
  "srcAsset": "Eth",
  "srcChain": "Ethereum",
  "srcChainExpiryBlock": 256n,
  "totalBrokerCommissionBps": 25,
}
`;

exports[`swapDepositAddressReady > creates a swap deposit channel entry with a channel opening fee 1`] = `
{
  "ccmGasBudget": null,
  "ccmMessage": null,
  "channelId": 1n,
  "chunkIntervalBlocks": null,
  "createdAt": Any<Date>,
  "depositAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2",
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "Dot",
  "estimatedExpiryAt": 2023-11-09T10:49:12.000Z,
  "expectedDepositAmount": null,
  "expiryBlock": null,
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "isExpired": false,
  "issuedBlock": 121,
  "maxBoostFeeBps": 0,
  "numberOfChunks": 1,
  "openedThroughBackend": false,
  "openingFeePaid": "1000",
  "srcAsset": "Eth",
  "srcChain": "Ethereum",
  "srcChainExpiryBlock": 256n,
  "totalBrokerCommissionBps": 0,
}
`;

exports[`swapDepositAddressReady > creates a swap deposit channel entry with ccm metadata 1`] = `
{
  "ccmGasBudget": "125000",
  "ccmMessage": "0xdeadc0de",
  "channelId": 8249n,
  "chunkIntervalBlocks": null,
  "createdAt": Any<Date>,
  "depositAddress": "tb1py08t882fvyekc99u3d2ejux4ra3lrckhypwm3a7eex688vjuuqhq8xnt3k",
  "destAddress": "0xfcd3c82b154cb4717ac98718d0fd13eeba3d2754",
  "destAsset": "Eth",
  "estimatedExpiryAt": 2072-10-14T20:50:00.000Z,
  "expectedDepositAmount": null,
  "expiryBlock": null,
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "isExpired": false,
  "issuedBlock": 120,
  "maxBoostFeeBps": 0,
  "numberOfChunks": 1,
  "openedThroughBackend": false,
  "openingFeePaid": "0",
  "srcAsset": "Btc",
  "srcChain": "Bitcoin",
  "srcChainExpiryBlock": 2573643n,
  "totalBrokerCommissionBps": 0,
}
`;

exports[`swapDepositAddressReady > does not overwrite expectedDepositAmount with zero 1`] = `
{
  "ccmGasBudget": null,
  "ccmMessage": null,
  "channelId": 1n,
  "chunkIntervalBlocks": null,
  "createdAt": Any<Date>,
  "depositAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2",
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "Dot",
  "estimatedExpiryAt": 2023-11-09T11:05:00.000Z,
  "expectedDepositAmount": "650",
  "expiryBlock": null,
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "isExpired": false,
  "issuedBlock": 10,
  "maxBoostFeeBps": 0,
  "numberOfChunks": 1,
  "openedThroughBackend": false,
  "openingFeePaid": "0",
  "srcAsset": "Eth",
  "srcChain": "Ethereum",
  "srcChainExpiryBlock": 256n,
  "totalBrokerCommissionBps": 0,
}
`;

exports[`swapDepositAddressReady > inserts affiliates 1`] = `
{
  "beneficiaries": [
    {
      "account": "",
      "channelId": Any<BigInt>,
      "commissionBps": 25,
      "id": Any<BigInt>,
      "type": "SUBMITTER",
    },
    {
      "account": "cFLhKgAVKDYQiyPXLH6yuvsWMXebn214VzKZEyXvEgcB9WT4T",
      "channelId": Any<BigInt>,
      "commissionBps": 100,
      "id": Any<BigInt>,
      "type": "AFFILIATE",
    },
  ],
  "ccmGasBudget": null,
  "ccmMessage": null,
  "channelId": 1n,
  "chunkIntervalBlocks": null,
  "createdAt": Any<Date>,
  "depositAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2",
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "Dot",
  "estimatedExpiryAt": 2023-11-09T10:49:12.000Z,
  "expectedDepositAmount": null,
  "expiryBlock": null,
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "isExpired": false,
  "issuedBlock": 120,
  "maxBoostFeeBps": 0,
  "numberOfChunks": 1,
  "openedThroughBackend": false,
  "openingFeePaid": "0",
  "srcAsset": "Eth",
  "srcChain": "Ethereum",
  "srcChainExpiryBlock": 256n,
  "totalBrokerCommissionBps": 125,
}
`;
